--- a/projects/Dyscalculator-1.5.html
+++ b/projects/Dyscalculator-1.5.html
@@ -338,7 +338,7 @@
             // This generates approximately 5~15 second delay
             // e.g. If Math.random returns 0.5, it's multiplied by 10000, which results in 5000, which then is added to 5000 to get 10000 which is a 10 second delay
             // Lower delay for debugging purposes
-            var debugmode = true;
+            var debugmode = false;
 
             if (debugmode = true) {
                 lazy = (Math.random() * 1000 + 500).toFixed(2);
