--- a/projects/Dyscalculator-1.5.html
+++ b/projects/Dyscalculator-1.5.html
@@ -340,7 +340,7 @@
             // Lower delay for debugging purposes
             var debugmode = false;
 
-            if (debugmode = true) {
+            if (debugmode == true) {
                 lazy = (Math.random() * 1000 + 500).toFixed(2);
             } else {
                 lazy = (Math.random() * 10000 + 5000).toFixed(2);
