--- a/projects/Dyscalculator-1.5.html
+++ b/projects/Dyscalculator-1.5.html
@@ -287,7 +287,7 @@
 
 <body>
     <h1 title="Yes, really! Version 1.5!">Dyscalculator 1.5</h1>
-    <p class="warning" title="This emulates dycalculia, but it's not 100% accurate. I made this just for fun! It's closer to Wrongulator. - Blackbeard">Ever wanted to know what it feels like to suck at math?</p>
+    <p class="warning" title="This emulates dyscalculia, but it's not 100% accurate. I made this just for fun! It's closer to Wrongulator. - Blackbeard">Ever wanted to know what it feels like to suck at math?</p>
     <p class="clickme" title="Click to see the original CodePen page, it's pretty awesome"><a href="https://codepen.io/giana/pen/GJMBEv">Original</a></p>
     <p hidden>
         I'm aware this isn't really random but it's fine.
@@ -342,7 +342,8 @@
 
             if (debugmode == true) {
                 lazy = (Math.random() * 1000 + 500).toFixed(2);
-            } else {
+            } 
+            else {
                 lazy = (Math.random() * 10000 + 5000).toFixed(2);
             }
         }
