--- a/projects/HTML5/OWLoader/loader.html
+++ b/projects/HTML5/OWLoader/loader.html
@@ -20,7 +20,8 @@
     <style>
         html {
             background-color: rgb(15, 3, 30);
-            font-family: "Futura Std", cursive;
+            /* Fallback fonts, not optimal but works okay-ish */
+            font-family: "Futura Std", "Nunito Sans", "Hind", "Montserrat", sans-serif;
             overflow-x: hidden;
             min-width: 1280px;
             min-height: 720px;
@@ -433,7 +434,8 @@
                 <p>Wind Scene melody is &copy; Square Enix. Sigma trailer music is &copy; Blizzard Entertainment. Gnossienne No.1 was composed by Erik Satie.</p>
                 <p>The piano rendition of Sigma trailer theme was done by FaceImplosion.</p>
                 <p>Still Alive and Want You Gone are &copy; Valve Incorporated. The author assumes no ownership on copyrighted materials.</p>
-                <p>Special thanks to ValhallaDSP (Audio effects), Rudench and xBytez (Portal ending in HTML5), Goldfire Studios (howler.js), GuhGuppy, Tyler, and everyone at Sigma and Torbjorn Mains Discord plus my dearest friends on Discord.</p>
+                <p>Special thanks to ValhallaDSP (Audio effects), Rudench and xBytez (Portal ending in HTML5), Goldfire Studios (howler.js), and my dearest friends on Discord.</p> 
+                    <p>(Extended credits on GitHub page)</p>
                 <p>Enjoyed my work? Please share this page with your friends.</p>
             </div>
             <div class="ow-button" id="close-btn" onclick="aboutClose();">Close</div>
