Added new font definition

--- a/projects/HTML5/OWLoader/loader.html
+++ b/projects/HTML5/OWLoader/loader.html
@@ -21,7 +21,7 @@
         html {
             background-color: rgb(15, 3, 30);
             /* Fallback fonts, not optimal but works okay-ish */
-            font-family: "Futura Std", "Nunito Sans", "Hind", "Montserrat", sans-serif;
+            font-family: "Futura Std", "Renner*", "Nunito Sans", "Hind", "Montserrat", sans-serif;
             overflow-x: hidden;
             min-width: 1280px;
             min-height: 720px;
@@ -754,7 +754,7 @@
     <script>
         // Autoplay blocker warning
         function OpenAlert() {
-            alert('You need to disable autoplay blocker for the sound to work.');
+            alert('You need to disable autoplay blocker for the sound to work. If you see wrong fonts, install Renner* font (asterisk is a part of the name)');
         }
 
         function CloseAlert() {
