--- a/projects/HTML5/OWLoader/loader.html
+++ b/projects/HTML5/OWLoader/loader.html
@@ -28,7 +28,7 @@
             overflow-x: hidden;
         }
 
-        .about-container {
+       .about-container {
             color: white;
             display: none;
             position: fixed;
@@ -47,6 +47,11 @@
         .about-header {
             font-size: 3em;
             font-weight: 600;
+            line-height: 0.2em;
+        }
+
+        .about-content {
+            line-height: 0.9em;
         }
 
         .game-over {
@@ -91,7 +96,7 @@
         .top-hud-sub {
             display: inline;
             color: #95BCC5;
-            background-color: rgba(0, 8, 15, 0.5);
+            background-color: rgba(0, 18, 35, 0.5);
             border: 1px solid rgba(149, 188, 197, 0.5);
             font-family: "Arial", sans-serif;
             font-size: 0.8em;
@@ -106,13 +111,13 @@
             position: absolute;
             font-family: "Arial", sans-serif;
             font-stretch: semi-condensed;
-            top: 10px;
-            right: 10px;
+            top: 5px;
+            right: 7px;
             padding-left: 2px;
             padding-right: 2px;
             float: right;
             color: #95BCC5;
-            background-color: rgba(0, 8, 15, 0.5);
+            background-color: rgba(0, 18, 35, 0.5);
             padding: 0.5px;
         }
 
@@ -392,8 +397,19 @@
             }
         }
 
-        @media screen and (max-width: 1280px),
-        (max-height: 800px) {
+        @media screen and (max-height: 830px) {
+            .chat-btn {
+                display: none;
+                overflow: hidden;
+            }
+            .ow-logo {
+                transform: scale(0.8);
+                transform-origin: center;
+            }
+        }
+        
+        @media screen and (max-width: 1279px),
+        (max-height: 750px) {
 
             .universe {
                 display: none;
@@ -413,7 +429,7 @@
     <div class="ScreenError">
         <p class="emphasis"><b>ERROR</b></p>
         <p class="error-text">The screen is too small to display the content.</p>
-        <p class="error-text">The screen must be at least 1280x800.</p>
+        <p class="error-text">The screen must be at least 1280x760.</p>
     </div>
     <div class="universe">
         <div class="darkness" id="space"></div>
@@ -644,7 +660,6 @@
             hours = hours % 12; // convert hours to 12hr format
             hours = hours ? hours : 12;
             minutes = minutes < 10 ? '0' + minutes : minutes; // add leading zero if it's less than 10
-            hours = hours < 10 ? '0' + hours : hours; // ditto
             var strTime = hours + ':' + minutes + ' ' + ampm; // assemble it together
             return strTime; // return the end product
         }
