--- a/projects/HTML5/OWLoader/loader.html
+++ b/projects/HTML5/OWLoader/loader.html
@@ -17,11 +17,12 @@
 
 <head>
     <title>OW Loader V2.0</title>
+    <link href="https://fonts.googleapis.com/css?family=Hind|Montserrat|Nunito+Sans&display=swap" rel="stylesheet"> 
     <style>
         html {
             background-color: rgb(15, 3, 30);
             /* Fallback fonts, not optimal but works okay-ish */
-            font-family: "Futura Std", "Renner*", "Nunito Sans", "Hind", "Montserrat", sans-serif;
+            font-family: "Futura No2", "Futura Nr2", "Futura Std", "Futura", "Renner*", "Nunito Sans", "Hind", "Montserrat", sans-serif;
             overflow-x: hidden;
             min-width: 1280px;
             min-height: 720px;
@@ -215,7 +216,7 @@
 
         .copyright-text {
             color: rgba(255, 255, 255, 0.75);
-            font-family: "Arial", sans-serif;
+            font-family: "Helvetica Neue", "Helvetica", "Arial Unicode", "Arial", sans-serif;
             font-weight: 300;
             font-size: 0.9em;
             margin-bottom: 20px;
