--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -216,6 +216,24 @@
             line-height: 0.4em;
         }
 
+        .rotate-screen {
+            color: #ffffff;
+            display: none;
+            position: fixed;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            overflow: hidden;
+            z-index: 999999;
+            background: rgb(0, 0, 0);
+            line-height: 0.4em;
+        }
+
         .error-icon {
             margin-bottom: 30px;
         }
@@ -291,16 +309,59 @@
             }
         }
 
-        .ogo {
-            width: 256px;
-            height: 64px;
+        .logo {
+            max-width: 512px;
+            max-height: 256px;
         }
+
+        @media only screen and (max-width: 360px) {
+            .screen-rotate {
+                display: flex;
+                background: black;
+                width: 100%;
+                height: 100%;
+                flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            }
+
+            .intro-container {
+                display: none;
+            }
+        }
+        @media only screen and (min-width: 600px) {
+            .screen-rotate {
+                display: none;
+            }
+            .rotate-icon {
+                display: none;
+            }
+        }
+
     </style>
 </head>
 
 <body>
     <div class="page-container">
         <div class="mouse-blocker" id="curtain"></div>
+        <div class="screen-rotate">
+            <div class="rotate-icon flash">
+                <svg xmlns="http://www.w3.org/2000/svg" width="128px" height="128px" viewBox="0 0 98.666 98.666">
+                    <g fill="currentColor">
+                        <path d="M84.271,42.357c-0.158,0.604-0.626,1.08-1.229,1.246c-0.153,0.041-0.31,0.062-0.465,0.062
+			c-0.453,0-0.896-0.177-1.229-0.504L70.201,32.163c-0.445-0.439-0.623-1.083-0.465-1.688s0.626-1.08,1.229-1.246l1.562-0.429
+			c-4.002-4.794-10.006-7.688-16.308-7.806c-0.954-0.018-1.717-0.797-1.717-1.75v-6.956c0-0.468,0.188-0.916,0.521-1.245
+			s0.798-0.48,1.252-0.504c11.136,0.152,21.165,5.863,26.968,15.313l2.825-0.777c0.603-0.165,1.248,0.004,1.692,0.441
+			c0.445,0.439,0.623,1.083,0.465,1.688L84.271,42.357z" />
+                        <path d="M0.105,2v73.701c0,1.104,0.896,2,2,2h18.754l-0.001,18.681c-0.013,0.093-0.02,0.188-0.02,0.284c0,1.104,0.896,2,2,2
+			c0.006,0,0.013,0,0.02,0h73.703c1.104,0,2-0.896,2-2V50.105c0-1.104-0.896-2-2-2H50.666V2c0-1.104-0.896-2-2-2H2.105
+			C1.001,0,0.105,0.896,0.105,2z M29.796,89.729V57.043h59.827v32.686H29.796z M20.859,50.105v18.658H9.042V8.937h32.686v39.169
+			H22.859C21.755,48.106,20.859,49.002,20.859,50.105z" />
+                    </g>
+                </svg>
+            </div>
+        </div>
         <noscript>
             <div class="warn-noscript">
                 <div class="error-icon flash">
@@ -420,6 +481,7 @@
             }
         }, 250);
     }
+
 </script>
 
 </html>
