--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -330,11 +330,12 @@
                 display: none;
             }
         }
-        @media only screen and (min-width: 600px) {
+        @media only screen and (min-width: 460px) {
             .screen-rotate {
                 display: none;
+                transform: translate(99999px);
             }
-            .rotate-icon {
+            .rotate-icon .flash {
                 display: none;
             }
         }
