--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -335,7 +335,7 @@
                 display: none;
                 transform: translate(99999px);
             }
-            .rotate-icon .flash {
+            .rotate-icon {
                 display: none;
             }
         }
