--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -49,7 +49,8 @@
             left: 0;
             bottom: 0;
             right: 0;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: visible;
             z-index: -98;
         }
         
@@ -212,7 +213,7 @@
             font-size: 1.7em;
         }
 
-        @media only screen and (max-width: 459px) {
+        @media only screen and (max-width: 439px) {
             .screen-rotate {
                 color: #ffffff;
                 display: flex;
@@ -230,12 +231,15 @@
                 background: rgb(0, 0, 0);
                 line-height: 0.4em;
             }
+
+            .intro-container {
+                display: none;
+            }
         }
 
-        @media only screen and (min-width: 460px) {
+        @media only screen and (min-width: 440px) {
             .screen-rotate {
                 display: none;
-                /* Yeet the icon and the div way outside of the view just to be safe */
                 transform: translate(99999px);
             }
 
