--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -9,7 +9,6 @@
     <title>My Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Hind|Montserrat|Nunito+Sans&display=swap" rel="stylesheet">
     <style>
-        
         body {
             color: white;
             font-family: "Nunito Sans", "Hind", "Montserrat", sans-serif;
@@ -52,7 +51,7 @@
             overflow: hidden;
             z-index: -98;
         }
-        
+
         .ui-title {
             font-size: 2em;
             margin-bottom: 10px;
@@ -212,7 +211,7 @@
             font-size: 1.7em;
         }
 
-        @media only screen and (max-width: 459px) {
+        @media only screen and (max-width: 439px) {
             .screen-rotate {
                 color: #ffffff;
                 display: flex;
@@ -225,17 +224,21 @@
                 left: 0;
                 bottom: 0;
                 right: 0;
-                overflow: hidden;
+                overflow-x: hidden;
+                overflow-y: visible;
                 z-index: 999999;
                 background: rgb(0, 0, 0);
                 line-height: 0.4em;
             }
+
+            .intro-container {
+                display: none;
+            }
         }
 
-        @media only screen and (min-width: 460px) {
+        @media only screen and (min-width: 440px) {
             .screen-rotate {
                 display: none;
-                /* Yeet the icon and the div way outside of the view just to be safe */
                 transform: translate(99999px);
             }
 
