--- a/projects/HTML5/OWLoader/index.html
+++ b/projects/HTML5/OWLoader/index.html
@@ -573,7 +573,7 @@
 </head>
 <!-- I'll leave the background plain, thank you, I don't wanna fuck with HTML5 canvas -->
 
-<body>
+<body onload="popupMsg('Error','<p>Blizzard Entertainment has suspended a Hearthstone pro player and two hosts for supporting the Hong Kong protest.</p><p>This is absolutely sickening and Blackbeard will not support the company in the future.</p><p>We vowed not to support Blizzard Entertainment in any way from now on.</p><p>This is not much, but this is the least we can do for those fighting for the freedom.</p><p>We hope you understand our position.</p>');">
     <div class="ScreenError">
         <p class="emphasis"><b>ERROR</b></p>
         <p class="error-text">The screen is too small to display the content.</p>
