--- a/commissions/index.html
+++ b/commissions/index.html
@@ -255,11 +255,11 @@
                                 <li>Free QA service</li>
                                 <li>Free tech support</li>
                                 <li>Ideal for landing pages</li>
-                                <li>Good for making your own websites</li>
-                                <li>Least amount of files to upload</li>
+                                <li>Good for basing your own websites on</li>
+                                <li>Minimal files to upload</li>
                                 <li>Lightweight page</li>
-                                <li>Least amount of JavaScript used</li>
-                                <li>Least amount of CDN (Content Distribution Network) reliance</li>
+                                <li>Minimal amount of JavaScript used -- Speeds up the page</li>
+                                <li>Minimal CDN (Content Distribution Network) reliance -- More reliable page, easy to maintain</li>
                                 <li>Easy to modify, throughly documented code</li>
                             </ul>
                             <p>However, this service does have caveats:</p>
