--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -64,37 +64,48 @@ Common issues
 </h2>
 <p>
 <ul>
-
+<li>
+Before anything, try this first
+<p>
+Restart your Steam client. Yeah. For reasons unknown, this fixes most of the issues.
+</p>
+</li>
+  
 <li>
 Crashes on some AMD Ryzen processors
 <p>
 A bug in the game engine causes the game to crash. Download the patched version of the game from our Discord server and put it in the game's bin folder.
 </p>
 </li>
+  
 <li>
 XINPUT1_3.dll and d3dx9_43.dll error
 <p>
 Please install DirectX 9 Runtime from Microsoft. This does not come pre-installed on Windows 10.
 </p>
 </li>
+  
 <li>
 "Ascend Service Not Available"
 <p>
 Use the launcher to start the game. <emr><u>NOT</u></emr> from Steam.
 </p>
 </li>
+  
 <li>
 Game crashes or black-screens when Alt-tabbing
 <p>
 Use Windowed mode. (Click Play on Steam, click on Use Launcher, set the window mode to Windowed, click Launch then close the game)
 </p>
 </li>
+  
 <li>
 Where did the launcher go? I'm sure I downloaded  it...
 <p>
 Your antivirus program (which may include your built-in Windows Defender) is deleting the file due to a false positive match. Add the launcher executable to the exception list, disable the antivirus while playing or use other antivirus programs.
 </p>
 </li>
+  
 <li>
 Invalid Resolution error
 <p>
