--- a/projects/1filesokoban/index.html
+++ b/projects/1filesokoban/index.html
@@ -1,4 +1,28 @@
-<!DOCTYPE HTML><html><head><title>1 FILE SOKOBAN!!!</title><script> 
+<!DOCTYPE HTML><html><head>
+<meta property="og:type" content="website">
+<meta property="twitter:card" content="summary_large_image">
+
+<!-- Change me to match the title -->
+<title>1 File Sokoban</title>
+<meta name="title" content="1 File Sokoban">
+<meta property="og:title" content="1 File Sokoban">
+<meta property="twitter:title" content="1 File Sokoban">
+
+<!-- Change me to match the description -->
+<meta name="description" content="Whole Sokoban in 1 HTML file">
+<meta property="og:description" content="Whole Sokoban in 1 HTML file">
+<meta property="twitter:description" content="Whole Sokoban in 1 HTML file">
+
+<!-- Change me to match the URL -->
+<meta property="twitter:url" content="https://unforeseenocean.github.io/projects/1filesokoban/index.html">
+<meta property="og:url" content="https://unforeseenocean.github.io/projects/1filesokoban/index.html">
+
+<!-- Change me to match the preview image -->
+<meta property="og:image" content="https://unforeseenocean.github.io/img/1filesokoban.png">
+<meta property="twitter:image" content="https://unforeseenocean.github.io/img/1filesokoban.png">
+</head>
+
+<script> 
 /*------------------------------------------------------------------------------ 
 Copyright (c) 2011 Antoine Santo Aka NoNameNo
 This File is part of the CODEF project.
