--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<html><head><title>Page Under Construction</title></head><body><h1>Page Under Construction</h1><p>This page is currently under construction and the index page is unavailable.</p><p>Additionally, you can see the index from the git repo directly.</p><hr><address>Apache/2.2.22 (Debian) Server at unforeseenocean.github.io Port 80</address></body></html>
+<html>
+<head>
+<meta property="og:type" content="website">
+<meta property="twitter:card" content="summary_large_image">
+
+<!-- Change me to match the title -->
+<title>Unforeseenocean.github.io -Home of Crapware</title>
+<meta name="title" content="Unforeseenocean.github.io -Home of Crapware">
+<meta property="og:title" content="Unforeseenocean.github.io -Home of Crapware">
+<meta property="twitter:title" content="Unforeseenocean.github.io -Home of Crapware">
+
+<!-- Change me to match the description -->
+<meta name="description" content="Providing Crapware & Vaporware - Open Source Crapware & Vaporware (Libre & Gratis)">
+<meta property="og:description" content="Providing Crapware & Vaporware - Open Source Crapware & Vaporware (Libre & Gratis)">
+<meta property="twitter:description" content="Providing Crapware & Vaporware - Open Source Crapware & Vaporware (Libre & Gratis)">
+
+<!-- Change me to match the URL -->
+<meta property="twitter:url" content="https://unforeseenocean.github.io/">
+<meta property="og:url" content="https://unforeseenocean.github.io/">
+
+<!-- Change me to match the preview image -->
+<meta property="og:image" content="https://unforeseenocean.github.io/img/social-preview-blank.png">
+<meta property="twitter:image" content="https://unforeseenocean.github.io/img/social-preview-blank.png">
+</head>
+
+<!-- Page start -->
+
+<body>
+<h1>Index of unforeseenocean.github.io</h1>
+<hr>
+<a href="ascender/readme/index.html">Ascender Readme</a><br>
+<a href="projects/1filesokoban/index.html">1 File Sokoban</a><br>
+<a href="projects/bigclive/index.html">Big Clive's LED Hack Calculator</a><br>
+<a href="projects/yubiclock/yubiclock.html">YUBICLOCK</a><br>
+<a href="projects/yubiclock/yubiclock-mobi.html">YUBICLOCK Mobile</a><br>
+<a href="projects/pangram/index.html">Pangram Maker</a><br>
+<a href=""></a><br>
+<a href=""></a><br>
+<a href=""></a><br>
+<a href=""></a><br>
+<a href=""></a><br>
+<a href=""></a><br>
+<a href=""></a><br>
+<a href=""></a><br>
+<a href=""></a><br>
+</body>
+</html>
