--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <a href="projects/yubiclock/yubiclock.html">YUBICLOCK</a><br>
 <a href="projects/yubiclock/yubiclock-mobi.html">YUBICLOCK Mobile</a><br>
 <a href="projects/pangram/index.html">Pangram Maker</a><br>
-<a href="projects/~trash/OWLoader/index.html">Unfinished - OWLoader</a><br>
+<a href="projects/trash/OWLoader/index.html">Unfinished - OWLoader</a><br>
 <a href=""></a><br>
 <a href=""></a><br>
 <a href=""></a><br>
