--- a/projects/trash/OWLoader/index.html
+++ b/projects/trash/OWLoader/index.html
@@ -23,14 +23,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://unforeseenocean.github.io/projects/~trash/OWLoader/index.html">
+    <meta property="og:url" content="https://unforeseenocean.github.io/projects/trash/OWLoader/index.html">
     <meta property="og:title" content="Activision Blizzard is trash">
     <meta property="og:description" content="Slow Internet Experience, with love (and masochism) from Sweden">
     <meta property="og:image" content="https://unforeseenocean.github.io/img/owloader.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://unforeseenocean.github.io/projects/~trash/OWLoader/index.html">
+    <meta property="twitter:url" content="https://unforeseenocean.github.io/projects/trash/OWLoader/index.html">
     <meta property="twitter:title" content="Activision Blizzard is trash">
     <meta property="twitter:description" content="Slow Internet Experience, with love (and masochism) from Sweden">
     <meta property="twitter:image" content="https://unforeseenocean.github.io/img/owloader.png">
