--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
 <a href=""></a><br>
 <a href=""></a><br>
 <a href=""></a><br>
+<hr>
+<address>For DMCA: torbjornl76+dmca gmail com</address>
 </body>
 </html>
