Added missing meta tags
Soz

--- a/projects/bigclive/index.html
+++ b/projects/bigclive/index.html
@@ -13,7 +13,27 @@
 		transform: scale(0px);
 	}
 	</style>
-	<title>Big Clive's LED Bulb Hack calculator</title>
+	<meta property="og:type" content="website">
+<meta property="twitter:card" content="summary_large_image">
+
+<!-- Change me to match the title -->
+<title>Big Clive's LED Bulb Hack Calculator</title>
+<meta name="title" content="Big Clive's LED Bulb Hack Calculator">
+<meta property="og:title" content="Big Clive's LED Bulb Hack Calculator">
+<meta property="twitter:title" content="Big Clive's LED Bulb Hack Calculator">
+
+<!-- Change me to match the description -->
+<meta name="description" content="Also works as Ohm's Law calculator">
+<meta property="og:description" content="Also works as Ohm's Law calculator">
+<meta property="twitter:description" content="Also works as Ohm's Law calculator">
+
+<!-- Change me to match the URL -->
+<meta property="twitter:url" content="https://unforeseenocean.github.io/projects/bigclive/index.html">
+<meta property="og:url" content="https://unforeseenocean.github.io/projects/bigclive/index.html">
+
+<!-- Change me to match the preview image -->
+<meta property="og:image" content="https://unforeseenocean.github.io/img/bigclive.png">
+<meta property="twitter:image" content="https://unforeseenocean.github.io/img/bigclive.png">
 </head>
 
 <body>
