--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a href="projects/yubiclock/Yubiclock-mobi.html">YUBICLOCK Mobile</a><br>
 <a href="projects/pangram/index.html">Pangram Maker</a><br>
 <a href="projects/trash/OWLoader/index.html">Unfinished - OWLoader</a><br>
-<a href=""></a><br>
+<a href="projects/time/index.html">Time-reactive SVG demo</a><br>
 <a href=""></a><br>
 <a href=""></a><br>
 <a href=""></a><br>
