--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -92,9 +92,9 @@ Restart your Steam client. Yeah. For reasons unknown, this fixes most of the iss
 </li>
   
 <li>
-Crashes on some AMD Ryzen processors
+Crashes on some AMD Ryzen processors and Intel processors with more than 4 cores
 <p>
-A bug in the game engine causes the game to crash. Download the patched version of the game from our Discord server and put it in the game's bin folder.
+A bug in the game engine causes the game to crash when running on CPUs with more than 4 cores. Download the patched version of the game from our Discord server and put it in the game's bin folder.
 </p>
 </li>
   
