--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -60,7 +60,7 @@ Ascender is a server replacement for the game Ascend: Hand of Kul, which has shu
 Installation
 </h2>
 <p>
-<emp>The NEW and IMPROVED launcher</emp> should do it automatically for you, which you can get through our Discord server: <a href="https://discord.gg/PpgHEB8">Discord server</a>
+<emp>The NEW and IMPROVED launcher</emp> should do it automatically for you, which you can get through our Discord server: <a href="https://discord.gg/PpgHEB8">Discord server</a> (<a href="https://github.com/UnforeseenOcean/UnforeseenOcean.github.io/raw/master/ascender/readme/Ascender_Launcher_Lite_20200609.zip">mirror link, may not be up to date</a>)
 </p>
 <p>
 Should the launcher not install the game for you, click on the link to start the game on Steam:
@@ -94,7 +94,7 @@ Restart your Steam client. Yeah. For reasons unknown, this fixes most of the iss
 <li>
 Crashes on some AMD Ryzen processors and Intel processors with more than 4 cores
 <p>
-A bug in the game engine causes the game to crash when running on CPUs with more than 4 cores. Download the patched version of the game from our Discord server and put it in the game's bin folder.
+A bug in the game engine causes the game to crash when running on CPUs with more than 4 cores. Download the patched version of the game executable (<a href="https://github.com/UnforeseenOcean/UnforeseenOcean.github.io/raw/master/ascender/readme/Game_Emulator_ThreadPatch.rar">mirror link</a>) from our Discord server and put it in the game's bin folder.
 </p>
 </li>
   
