--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -85,16 +85,16 @@ Common issues
 <p>
 <ul>
 <li>
-Before anything, try this first
+<b>Important: Before anything, try this first</b>
 <p>
 Restart your Steam client. Yeah. For reasons unknown, this fixes most of the issues.
 </p>
 </li>
   
 <li>
-Crashes on some AMD Ryzen processors and Intel processors with more than 4 cores
+<b>Important: Crashes on some AMD Ryzen processors and Intel processors with more than 4 cores</b>
 <p>
-A bug in the game engine causes the game to crash when running on CPUs with more than 4 cores. Download the patched version of the game executable (<a href="https://github.com/UnforeseenOcean/UnforeseenOcean.github.io/raw/master/ascender/readme/Game_Emulator_ThreadPatch.rar">mirror link</a>) from our Discord server and put it in the game's bin folder.
+A bug in the game engine causes the game to crash when running on CPUs with more than 4 cores. Download the patched version of the game executable (<a href="https://github.com/UnforeseenOcean/UnforeseenOcean.github.io/raw/master/ascender/readme/Game_Emulator_ThreadPatch.rar">mirror link</a>) from our Discord server and put it in <code>game installation folder/bin</code> folder, overwriting the main executable.
 </p>
 </li>
   
@@ -143,7 +143,65 @@ Unpack the full archive (consult G**gle or other search engines if you have no i
 <li>
 Game does not work on Windows 10 despite trying everything
 <p>
-Try reinstalling the game outside of the default folder. This is not a recommended fix, but it sometimes resolves the issue on Windows 10 systems. Before you try this, try other solutions first.
+Try reinstalling the game outside of the default folder. This is <b>not a recommended fix</b>, but it sometimes resolves the issue on some Windows 10 systems. Before you try this, try other solutions first.
+</p>
+</li>
+</ul>
+<h2>Known issues</h2>
+<ul>
+<li>
+About transcending/ascending
+<p>
+This function is not implemented yet and will result in the game softlocking or disconnects.
+</p>
+</li>
+<li>
+Boosts - What&apos;s going on with that?
+<p>
+Boosts are not working correctly. Applying boost and logging out will make the boost expire immediately.
+</p>
+</li>
+<li>
+Sanctum is looking a bit... bare
+<p>
+Yeah, the leaderboards and previous player data is nonexistent, that's why it's empty.
+</p>
+</li>
+<li>
+Curses and Blessings
+<p>
+This also doesn't work that well, meaning some curses and blessings may not work on other players.
+</p>
+</li>
+<li>
+Negative Souls
+<p>
+This is either a result of game hacking, cheating or game bugs. (if you suspect it's a bug, please let us know through Discord!)
+</p>
+</li>
+<li>
+Incorrect prices on shop items / items show up as "Free" instead of "Owned"
+<p>
+This is due to the server returning incorrect, placeholder values. May be fixed later.
+</p>
+</li>
+<li>
+Forging / Repairing items using pedestals in the game
+<p>
+This function is not quite there yet... So it mostly doesn't work.
+</p>
+</li>
+<li>
+Invading / Being Invaded
+<p>
+This stat resets on every logon because its data is not being saved.
+</p>
+</li>
+<li>
+Auto-save icon won't go away
+<p>
+This means you just did something the server cannot handle and you've been disconnected from the server.<br>
+Please quit the game using Task Manager and try again. (Please tell us what action you just took!)
 </p>
 </li>
 </ul>
