--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -99,12 +99,19 @@ A bug in the game engine causes the game to crash when running on CPUs with more
 </li>
   
 <li>
-XINPUT1_3.dll and d3dx9_43.dll error
+<b>Important: XINPUT1_3.dll and d3dx9_43.dll error</b>
 <p>
 Please install DirectX 9 Runtime from Microsoft. This does not come pre-installed on Windows 10.
 </p>
 </li>
-  
+
+<li>
+<b>Important: Launcher not starting, complains about Visual C++ Runtime</b>
+<p>
+Please install <i>Microsoft Visual C++ Redistributable 2015/2017</i>. The launcher requires this.
+</p>
+</li>
+
 <li>
 "Ascend Service Not Available"
 <p>
