--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -108,6 +108,7 @@ Please install DirectX 9 Runtime from Microsoft. This does not come pre-installe
 <li>
 <b>Important: Launcher not starting, complains about Visual C++ Runtime</b>
 <p>
+This sometimes will say "This program cannot start because VCRUNTIME140.dll is missing from your computer".<br>
 Please install <i>Microsoft Visual C++ Redistributable 2015/2017</i>. The launcher requires this.
 </p>
 </li>
