--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -109,7 +109,9 @@ Please install DirectX 9 Runtime from Microsoft. This does not come pre-installe
 <b>Important: Launcher not starting, complains about Visual C++ Runtime</b>
 <p>
 This sometimes will say "This program cannot start because VCRUNTIME140.dll is missing from your computer".<br>
-Please install <i>Microsoft Visual C++ Redistributable 2015/2017</i>. The launcher requires this.
+Please install <i>Microsoft Visual C++ Redistributable 2015/2017</i>. The launcher requires this. Make sure you download the version that matches your OS (usually 64bit).<br>
+<a href="https://aka.ms/vs/16/release/vc_redist.x86.exe">Visual C++ 2017 download (32bit)</a>
+<a href="https://aka.ms/vs/16/release/vc_redist.x64.exe">Visual C++ 2017 download (64bit)</a>
 </p>
 </li>
 
