--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -114,6 +114,16 @@ Please install <i>Microsoft Visual C++ Redistributable 2015/2017</i>. The launch
 <a href="https://aka.ms/vs/16/release/vc_redist.x64.exe">Visual C++ 2017 download (64bit)</a>
 </p>
 </li>
+    
+<li>
+<b>Important: "Game not installed" error</b>
+<p>
+    Try moving the game to another library folder through Steam client. <emr><b>DO NOT move the game manually.</b></emr> That will not work. At all. Don't even try it. Believe me, I tried.
+</p>
+    <p>
+        Make a new library folder or select one that does <b>NOT</b> contain the game. Then, move the game to that library.
+    </p>
+</li>
 
 <li>
 "Ascend Service Not Available"
